--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/telegram-web-app": "^7.2.1",
+    "babel-runtime": "^6.26.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-slider": "^2.0.6",
+    "react-switch": "^7.0.0",
     "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slider": "^1.3.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
