--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.26.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-slider": "^1.3.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
