--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
     "react-slider": "^2.0.6",
     "react-switch": "^7.0.0",
     "sass": "^1.77.6"
