--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.26.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
